config/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  selector:
    app: in-wreaclaste
  ports:
    - port: 8088
