config/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8088
